Actions
Bug #13126
closedlibc: variable dereferenced before check 'found'
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
smatch error:
/code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../port/gen/crypt.c:573 getalgbyname() warn: variable dereferenced before check 'found' (see line 498)
Testing done: build/install/boot.
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit d83a2486bd7b53e4a9741736a076e098071b5cbd
commit d83a2486bd7b53e4a9741736a076e098071b5cbd Author: Toomas Soome <tsoome@me.com> Date: 2020-09-21T17:31:56.000Z 13126 libc: variable dereferenced before check 'found' Reviewed by: Jason King <jason.brian.king@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions